Add module java.smartcardio for compilation